[package]
name = "resty"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.0.0"
reqwest = { version = "0.11.12", features = ["json"] }
serde = "1.0.144"
serde_derive = "1.0.144"
serde_json = "1.0.85"
