[package]
name = "resty"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.65"
colored = "2.0.0"
futures-util = "0.3.25"
reqwest = { version = "0.11.12", features = ["json", "cookies"] }
serde = "1.0.144"
serde_derive = "1.0.144"
serde_json = "1.0.85"
tokio = {version = "1.21.2", features = ["full"]}
tokio-tungstenite = "0.17.2"
url = "2.3.1"
