[package]
name = "test-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.0"
actix-web = "4.2.1"
actix-web-actors = "4.1.0"
colored = "2.0.0"
env_logger = "0.9.1"
serde = "1.0.147"
serde_derive = "1.0.147"
serde_json = "1.0.87"
